--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -61,6 +61,7 @@ jobs:
           #
           # You may remove this line if you want to manage the configuration yourself.
           static_site_generator: next
+        env: ${{ vars.NEXT_PUBLIC_DIRECTUS_URL }}
       - name: Restore cache
         uses: actions/cache@v3
         with:
