--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -74,7 +74,7 @@ jobs:
       - name: Install dependencies
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
       - name: Build with Next.js
-        run: ${{ steps.detect-package-manager.outputs.runner }} next build && echo ${vars.NEXT_PUBLIC_DIRECTUS_URL}
+        run: ${{ steps.detect-package-manager.outputs.runner }} next build && echo ${NEXT_PUBLIC_DIRECTUS_URL}
       # - name: Static HTML export with Next.js
       #   run: ${{ steps.detect-package-manager.outputs.runner }} next export
         env: 
