--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -78,7 +78,7 @@ jobs:
       # - name: Static HTML export with Next.js
       #   run: ${{ steps.detect-package-manager.outputs.runner }} next export
         env: 
-          NEXT_PUBLIC_DIRECTUS_URL: ${{ vars.NEXT_PUBLIC_DIRECTUS_URL }}
+          NEXT_PUBLIC_DIRECTUS_URL: https://directus.mizunanari.com
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
