--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -74,11 +74,11 @@ jobs:
       - name: Install dependencies
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
       - name: Build with Next.js
-        run: ${{ steps.detect-package-manager.outputs.runner }} next build && echo ${NEXT_PUBLIC_DIRECTUS_URL}
+        run: ${{ steps.detect-package-manager.outputs.runner }} next build
       # - name: Static HTML export with Next.js
       #   run: ${{ steps.detect-package-manager.outputs.runner }} next export
         env: 
-          NEXT_PUBLIC_DIRECTUS_URL: https://directus.mizunanari.com
+          NEXT_PUBLIC_DIRECTUS_URL: ${{ vars.NEXT_PUBLIC_DIRECTUS_URL }}
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
